get request to user and recipe router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Back-end",
+  "name": "back-end",
   "version": "1.0.0",
   "description": "secret family recipes back end! Good luck all!",
   "main": "index.js",
