--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.10",
     "knex-cleaner": "^1.3.0",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "test": "^0.6.0"
   },
   "devDependencies": {
     "jest": "^25.1.0",
